@@ -112,8 +112,8 @@ OP_CONVERTOR(aten::logical_not, NONE, createLogical_not, {PARAM(0)})
 // Activations
 OP_CONVERTOR(aten::selu, NONE, createSelu, {PARAM(0)} COMMA 1.6732632423543772848170429916717f COMMA 1.0507009873554804934193349852946f)
 OP_CONVERTOR(aten::selu_, NONE, createSelu, {PARAM(0)} COMMA 1.6732632423543772848170429916717f COMMA 1.0507009873554804934193349852946f)
-// Re-enable after release (in popart master)
-// OP_CONVERTOR(aten::prelu, NONE, Create_prelu, {PARAM(0) COMMA PARAM(1)})
+OP_CONVERTOR(aten::prelu, NONE, createPrelu, {PARAM(0) COMMA PARAM(1)})
+OP_CONVERTOR(aten::prelu_, NONE, createPrelu, {PARAM(0) COMMA PARAM(1)})
 OP_CONVERTOR(aten::elu, NONE, createElu, {PARAM(0)} COMMA HANDLE(1, float))
 OP_CONVERTOR(aten::elu_, NONE, createElu, {PARAM(0)} COMMA HANDLE(1, float))
 OP_CONVERTOR(aten::leaky_relu, NONE, createLeakyrelu, {PARAM(0)} COMMA HANDLE(1, float))
