@@ -17,17 +17,9 @@ import pytest
 #'torch.nn.AdaptiveLogSoftmaxWithLoss.predict',
 
 activation_functions = [
-    torch.nn.ReLU,
-    torch.nn.Tanh,
-    torch.nn.
-    Sigmoid,  # torch.nn.PReLU, re-enable after release (in popart master)
-    torch.nn.SELU,
-    torch.nn.ELU,
-    torch.nn.GELU,
-    torch.nn.Softmax,
-    torch.nn.LogSoftmax,
-    torch.nn.Softsign,
-    torch.nn.LeakyReLU
+    torch.nn.ReLU, torch.nn.Tanh, torch.nn.Sigmoid, torch.nn.PReLU,
+    torch.nn.SELU, torch.nn.ELU, torch.nn.GELU, torch.nn.Softmax,
+    torch.nn.LogSoftmax, torch.nn.Softsign, torch.nn.LeakyReLU
 ]
 
 
